# geohash-cid

./: .gitignore  README.md  pyproject.toml  readme.md
assets/: ._clean_size.csv  clean_size.csv  dc_restaurants.parquet  geohash_level_chart.csv  query_size.csv  query_size_old.csv  us_100_random.geojson
benchmarks/: Showcase.ipynb  benchmark_vis.ipynb  plots.ipynb  spatial_query.py  test.py
docs/: ACM.ipynb
geohashtree/: config.py  filesystem.py  geohash_func.py  geohashtree.py  geometry.py  trie.py  util.py
helper_scripts/: ipfs_add.sh
notebooks/: DAG_for_geojson.ipynb  H3_prototyping.ipynb  _Debugging.ipynb  geocid_merkletree.ipynb  geohash-ipfs-blog-post.ipynb  geohash_hojati.ipynb  geohash_offset.ipynb  large_dataset.ipynb  merkletree.ipynb  query_processor.ipynb  spatial_query_comparison.ipynb
notebooks/archive_code/: DAG_for_geojson.ipynb  geocid_merkletree.ipynb
notebooks/data_processing/: openstreetmap.ipynb  openstreetmap.py  overturemap_parquet.ipynb  parquet_parser.ipynb
postgresql/: Dockerfile  Dockerfile.postgis  docker-compose.yml
