[tool.poetry]
name = "geohash-cid"
version = "0.1.0"
description = "toolkit for spatial indexing in IPFS"
authors = ["Zheng Liu <zliu1208@umd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.0"
psycopg2-binary = "^2.9.9"
ipfs-stac = "^0.1.12"
jupyter = "^1.0.0"
pygeohash = {git = "git@github.com:wdm0006/pygeohash.git"}
leafmap = "^0.27.0"
sqlalchemy = "^2.0.21"
geoalchemy2 = "^0.14.1"
contextily = "^1.4.0"
py-multiformats-cid = "^0.4.4"
seaborn = "^0.13.2"
pyarrow = "^15.0.1"
pyrosm = "^0.6.2"
psutil = "^5.9.8"
ipyleaflet = "^0.18.2"
ipywidgets = "^8.1.2"
altair = {extras = ["all"], version = "^5.3.0"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
